--- a/HolidayGreetings/MerryChristmasandHappyHolidays.ipynb
+++ b/HolidayGreetings/MerryChristmasandHappyHolidays.ipynb
@@ -57,9 +57,9 @@
     "        print(Fore.RED + s.center(width)) \n",
     "    elif x < body_height:        \n",
     "        for y in range(0,x):\n",
-    "            b = randint(0, width)\n",
-    "            a = randint(0, width)\n",
-    "            c = randint(0, width)\n",
+    "            b = randint(0, width) # Location to add random decoration 1\n",
+    "            a = randint(0, width) # Add random decoration 2\n",
+    "            c = randint(0, width) # Add random decoration 3\n",
     "            if y==b:\n",
     "                s = s + 'o'\n",
     "            elif y==a:\n",
