--- a/HolidayGreetings/MerryChristmasandHappyHolidays.ipynb
+++ b/HolidayGreetings/MerryChristmasandHappyHolidays.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,22 +19,22 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m            *            \n",
-      "\u001b[32m           ^^o           \n",
-      "\u001b[32m          ^+^+^          \n",
-      "\u001b[32m         ^^^^@^^         \n",
-      "\u001b[32m        ^o^^^^^^^        \n",
+      "\u001b[32m           ^^^           \n",
+      "\u001b[32m          o^^^@          \n",
+      "\u001b[32m         ^^^^^^^         \n",
+      "\u001b[32m        ^^^^^^^^^        \n",
       "\u001b[32m       ^^^^^^^^^^^       \n",
-      "\u001b[32m      ^^@^^^@^^^^^^      \n",
-      "\u001b[32m     ^^^+^o^^^^^^^^^     \n",
-      "\u001b[32m    ^^+^^+^^^^^+^^^^^    \n",
-      "\u001b[32m   ^^^^^^^^^@^^^^^^^^^   \n",
-      "\u001b[32m  ^+^^^^^o^^^o^^^^^^^^@  \n",
-      "\u001b[32m ^^^^^^^^^o^^^^^^^^^oo^^ \n",
+      "\u001b[32m      ^^^^^+^^^o^^^      \n",
+      "\u001b[32m     ^^^oo^^^^^^^^^^     \n",
+      "\u001b[32m    ^^^^^^^^^^^^^+^^^    \n",
+      "\u001b[32m   @^^@^^o^^@^^+^^^^^^   \n",
+      "\u001b[32m  o^^^^+^^@^^^^^^@^^^^@  \n",
+      "\u001b[32m o^^^^^^@^^^^^^^^^^@^^^o \n",
       "\u001b[34m#########################\n",
       "\u001b[35m            II           \n",
       "\u001b[35m            II           \n",
       "~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "\u001b[31m     MERRY CRISTAMAS     \n",
+      "\u001b[31m     MERRY CHRISTMAS     \n",
       "\u001b[31m           AND           \n",
       "\u001b[31m     HAPPY HOLIDAYS !    \n",
       "~~~~~~~~~~~~~~~~~~~~~~~~~\n"
@@ -77,7 +77,7 @@
     "        print(Fore.MAGENTA + s.center(width)) \n",
     "\n",
     "print(('~'*width).center(width))  \n",
-    "print(Fore.RED + 'MERRY CRISTAMAS'.center(width)) \n",
+    "print(Fore.RED + 'MERRY CHRISTMAS'.center(width)) \n",
     "print(Fore.RED + 'AND'.center(width))\n",
     "print(Fore.RED + 'HAPPY HOLIDAYS !'.center(width))\n",
     "print(('~'*width).center(width))  "
