--- a/HolidayGreetings/MerryChristmasandHappyHolidays_Julia.ipynb
+++ b/HolidayGreetings/MerryChristmasandHappyHolidays_Julia.ipynb
@@ -20,18 +20,18 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m            *\n",
-      "\u001b[32m           ^+^\n",
-      "\u001b[32m          ^^@^^\n",
-      "\u001b[32m         ^+^^+o^\n",
-      "\u001b[32m        ^^^^^^^^^\n",
-      "\u001b[32m       ^^o^^^^^^@^\n",
-      "\u001b[32m      ^^^^^^^^^^^+^\n",
-      "\u001b[32m     ^^^o^^o^^^^^^^^\n",
-      "\u001b[32m    ^^^^^^^^^@o^^^^^^\n",
-      "\u001b[32m   ^^^^o^^^^^^^^^^^@^^\n",
-      "\u001b[32m  +^^@^^^^^@^^^+^^^^+^^\n",
-      "\u001b[32m ^^^+^^^^^^^^^+^o^^^^^^^\n",
-      "#########################\n",
+      "\u001b[32m           ^^^\n",
+      "\u001b[32m          ^^^^^\n",
+      "\u001b[32m         ^^^^^^^\n",
+      "\u001b[32m        ^@^^^^^^^\n",
+      "\u001b[32m       ^^^^^^^^^^^\n",
+      "\u001b[32m      ^^^@^^^@^^^^^\n",
+      "\u001b[32m     ^^^^^^^^^^^^^+^\n",
+      "\u001b[32m    ^^^^^^++^^^^^^^^^\n",
+      "\u001b[32m   ^^^^^^^^^^^^^^^^o^^\n",
+      "\u001b[32m  ^^^^^^^^^^^^^^^^^^^+^\n",
+      "\u001b[32m ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "\u001b[34m#########################\n",
       "\u001b[35m            II\n",
       "\u001b[35m            II\n",
       "\u001b[35m~~~~~~~~~~~~~~~~~~~~~~~~~\n",
@@ -76,7 +76,7 @@
     "        \n",
     "    elseif x == body_height\n",
     "        s = s * \"#\"^width\n",
-    "        println(' '^padding*s) \n",
+    "        println(Crayon(foreground = :blue),' '^padding*s) \n",
     "    elseif x > body_height && x < full_height\n",
     "        s = s * \"II\"\n",
     "        println(Crayon(foreground = :magenta),' '^center*s) \n",
