--- a/HolidayGreetings/MerryChristmasandHappyHolidays_Julia.ipynb
+++ b/HolidayGreetings/MerryChristmasandHappyHolidays_Julia.ipynb
@@ -22,15 +22,15 @@
       "\u001b[31m            *\n",
       "\u001b[32m           ^^^\n",
       "\u001b[32m          ^^^^^\n",
-      "\u001b[32m         ^^^^^^^\n",
-      "\u001b[32m        ^@^^^^^^^\n",
+      "\u001b[32m         ^^^o^@^\n",
+      "\u001b[32m        ^^@^^^^^^\n",
       "\u001b[32m       ^^^^^^^^^^^\n",
-      "\u001b[32m      ^^^@^^^@^^^^^\n",
-      "\u001b[32m     ^^^^^^^^^^^^^+^\n",
-      "\u001b[32m    ^^^^^^++^^^^^^^^^\n",
-      "\u001b[32m   ^^^^^^^^^^^^^^^^o^^\n",
-      "\u001b[32m  ^^^^^^^^^^^^^^^^^^^+^\n",
-      "\u001b[32m ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "\u001b[32m      ^^^^^@^^^^^^^\n",
+      "\u001b[32m     ^^^^^^^^^^^^^^^\n",
+      "\u001b[32m    ^^^^^^^^^+^^^^^^^\n",
+      "\u001b[32m   ^@^^^^^^^^o^^^^o^^^\n",
+      "\u001b[32m  ^^^^^^^^^^^^^^^^^^o^^\n",
+      "\u001b[32m +^^^^^^@^^^^^^^^@^+^^^^\n",
       "\u001b[34m#########################\n",
       "\u001b[35m            II\n",
       "\u001b[35m            II\n",
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "using Crayons #To add Colors \n",
+    "using Crayons # To change font colors (https://github.com/KristofferC/Crayons.jl)\n",
     "\n",
     "width = 25 # Tree width\n",
     "body_height = 25 # Height without stand\n",
